# python_project

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/prime_number/: checker.py
test/: test_prime_number_checker.py
